@@ -11,12 +11,16 @@
 package org.junit.platform.commons.util;
 
 import static org.apiguardian.api.API.Status.INTERNAL;
+import static org.junit.platform.commons.util.ReflectionUtils.EMPTY_CLASS_ARRAY;
+import static org.junit.platform.commons.util.ReflectionUtils.findMethod;
+import static org.junit.platform.commons.util.ReflectionUtils.isStatic;
 import static org.junit.platform.commons.util.ReflectionUtils.tryToLoadClass;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
 import java.lang.reflect.Type;
+import java.util.Arrays;
 
 import org.apiguardian.api.API;
 import org.jspecify.annotations.Nullable;
@@ -25,15 +29,16 @@ import org.junit.platform.commons.function.Try;
 /**
  * Internal Kotlin-specific reflection utilities
  *
- * @since 6.0
+ * @since 5.13.3
  */
-@API(status = INTERNAL, since = "6.0")
+@API(status = INTERNAL, since = "5.13.3")
 public class KotlinReflectionUtils {
 
 	private static final @Nullable Class<? extends Annotation> kotlinMetadata;
 	private static final @Nullable Class<?> kotlinCoroutineContinuation;
 	private static final boolean kotlinReflectPresent;
 	private static final boolean kotlinxCoroutinesPresent;
+	public static final String DEFAULT_IMPLS_CLASS_NAME = "DefaultImpls";
 
 	static {
 		var metadata = tryToLoadKotlinMetadataClass();
@@ -56,6 +61,10 @@ public class KotlinReflectionUtils {
 				.andThenTry(it -> (Class<? extends Annotation>) it);
 	}
 
+	/**
+	 * @since 6.0
+	 */
+	@API(status = INTERNAL, since = "6.0")
 	public static boolean isKotlinSuspendingFunction(Method method) {
 		if (kotlinCoroutineContinuation != null && isKotlinType(method.getDeclaringClass())) {
 			int parameterCount = method.getParameterCount();
@@ -63,6 +72,51 @@ public class KotlinReflectionUtils {
 					&& method.getParameterTypes()[parameterCount - 1] == kotlinCoroutineContinuation;
 		}
 		return false;
+	}
+
+	/**
+	 * Determines whether the supplied class is a {@code DefaultImpls} class
+	 * generated by the Kotlin compiler.
+	 *
+	 * <p>See
+	 * <a href="https://kotlinlang.org/docs/interfaces.html#jvm-default-method-generation-for-interface-functions">Kotlin documentation</a>
+	 * for details.
+	 *
+	 * @since 5.13.3
+	 */
+	@API(status = INTERNAL, since = "5.13.3")
+	public static boolean isKotlinInterfaceDefaultImplsClass(Class<?> clazz) {
+		if (!isKotlinType(clazz) || !DEFAULT_IMPLS_CLASS_NAME.equals(clazz.getSimpleName()) || !isStatic(clazz)) {
+			return false;
+		}
+
+		Class<?> enclosingClass = clazz.getEnclosingClass();
+		if (enclosingClass != null && enclosingClass.isInterface()) {
+			return Arrays.stream(clazz.getDeclaredMethods()) //
+					.anyMatch(method -> isCompilerGeneratedDefaultMethod(method, enclosingClass));
+		}
+
+		return false;
+	}
+
+	private static boolean isCompilerGeneratedDefaultMethod(Method method, Class<?> enclosingClass) {
+		if (isStatic(method) && method.getParameterCount() > 0) {
+			var parameterTypes = method.getParameterTypes();
+			if (parameterTypes[0] == enclosingClass) {
+				var originalParameterTypes = copyWithoutFirst(parameterTypes);
+				return findMethod(enclosingClass, method.getName(), originalParameterTypes).isPresent();
+			}
+		}
+		return false;
+	}
+
+	private static Class<?>[] copyWithoutFirst(Class<?>[] values) {
+		if (values.length == 1) {
+			return EMPTY_CLASS_ARRAY;
+		}
+		var result = new Class<?>[values.length - 1];
+		System.arraycopy(values, 1, result, 0, result.length);
+		return result;
 	}
 
 	private static boolean isKotlinType(Class<?> clazz) {
