@@ -14,9 +14,11 @@ import static java.util.Comparator.comparing;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.fail;
+import static org.junit.jupiter.api.Assumptions.assumeFalse;
 import static org.junit.jupiter.api.Named.named;
 import static org.junit.jupiter.engine.discovery.JupiterUniqueIdBuilder.uniqueIdForTestTemplateMethod;
 import static org.junit.jupiter.params.provider.Arguments.argumentSet;
+import static org.junit.platform.commons.test.IdeUtils.runningInEclipse;
 import static org.junit.platform.commons.util.CollectionUtils.getOnlyElement;
 import static org.junit.platform.engine.discovery.ClassNameFilter.includeClassNamePatterns;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectClass;
@@ -39,6 +41,7 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInfo;
 import org.junit.jupiter.api.TestTemplate;
+import org.junit.jupiter.api.extension.DisabledInEclipse;
 import org.junit.jupiter.engine.AbstractJupiterTestEngineTests;
 import org.junit.jupiter.engine.JupiterTestEngine;
 import org.junit.jupiter.engine.descriptor.ClassTestDescriptor;
@@ -47,6 +50,7 @@ import org.junit.jupiter.engine.descriptor.TestMethodTestDescriptor;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.junit.platform.engine.DiscoveryIssue;
 import org.junit.platform.engine.DiscoveryIssue.Severity;
 import org.junit.platform.engine.TestDescriptor;
@@ -72,6 +76,50 @@ class DiscoveryTests extends AbstractJupiterTestEngineTests {
 		LauncherDiscoveryRequest request = defaultRequest().selectors(selectClass(AbstractTestCase.class)).build();
 		TestDescriptor engineDescriptor = discoverTestsWithoutIssues(request);
 		assertEquals(0, engineDescriptor.getDescendants().size(), "# resolved test descriptors");
+	}
+
+	@ParameterizedTest
+	@ValueSource(strings = { "org.junit.jupiter.engine.discovery.DiscoveryTests$InterfaceTestCase",
+			"org.junit.jupiter.engine.kotlin.KotlinInterfaceTestCase" })
+	void doNotDiscoverTestInterface(String className) {
+
+		assumeFalse(runningInEclipse() && className.contains(".kotlin."));
+
+		LauncherDiscoveryRequest request = defaultRequest().selectors(selectClass(className)).build();
+		TestDescriptor engineDescriptor = discoverTestsWithoutIssues(request);
+		assertEquals(0, engineDescriptor.getDescendants().size(), "# resolved test descriptors");
+	}
+
+	@Test
+	@DisabledInEclipse
+	void doNotDiscoverGeneratedKotlinDefaultImplsClass() {
+		LauncherDiscoveryRequest request = defaultRequest() //
+				.selectors(selectClass("org.junit.jupiter.engine.kotlin.KotlinInterfaceTestCase$DefaultImpls")) //
+				.build();
+		TestDescriptor engineDescriptor = discoverTestsWithoutIssues(request);
+		assertEquals(0, engineDescriptor.getDescendants().size(), "# resolved test descriptors");
+	}
+
+	@Test
+	@DisabledInEclipse
+	void discoverDeclaredKotlinDefaultImplsClass() {
+		LauncherDiscoveryRequest request = defaultRequest().selectors(
+			selectClass("org.junit.jupiter.engine.kotlin.KotlinDefaultImplsTestCase$DefaultImpls")).build();
+		TestDescriptor engineDescriptor = discoverTestsWithoutIssues(request);
+		assertEquals(2, engineDescriptor.getDescendants().size(), "# resolved test descriptors");
+	}
+
+	@ParameterizedTest
+	@ValueSource(strings = {
+			"org.junit.jupiter.engine.discovery.DiscoveryTests$ConcreteImplementationOfInterfaceTestCase",
+			"org.junit.jupiter.engine.kotlin.KotlinInterfaceImplementationTestCase" })
+	void discoverTestClassInheritingTestsFromInterface(String className) {
+
+		assumeFalse(runningInEclipse() && className.contains(".kotlin."));
+
+		LauncherDiscoveryRequest request = defaultRequest().selectors(selectClass(className)).build();
+		TestDescriptor engineDescriptor = discoverTestsWithoutIssues(request);
+		assertEquals(2, engineDescriptor.getDescendants().size(), "# resolved test descriptors");
 	}
 
 	@Test
@@ -522,6 +570,15 @@ class DiscoveryTests extends AbstractJupiterTestEngineTests {
 		@DisplayName("\t")
 		void test() {
 		}
+	}
+
+	interface InterfaceTestCase {
+		@Test
+		default void test() {
+		}
+	}
+
+	static class ConcreteImplementationOfInterfaceTestCase implements InterfaceTestCase {
 	}
 
 }
