@@ -37,6 +37,8 @@ repository on GitHub.
 
 * Stop reporting discovery issues for composed annotation classes that are meta-annotated
   with `@Nested`.
+* Stop reporting discovery issues for `DefaultImpls` classes generated by the Kotlin
+  compiler for interfaces with non-abstract test methods.
 
 [[release-notes-5.13.3-junit-jupiter-deprecations-and-breaking-changes]]
 ==== Deprecations and Breaking Changes
